# alphax_master_pos

./: MANIFEST.in  README.md  pyproject.toml  setup.py
alphax_master_pos/: api.py  api_shift.py  hooks.py  install.py  modules.txt  patches.txt
alphax_master_pos/alphax_master_pos/: api.py  api_shift.py  install.py
alphax_master_pos/alphax_master_pos/doctype/alphax_pos_barcode_rule/: alphax_pos_barcode_rule.json
alphax_master_pos/alphax_master_pos/pos/: day_close.py  posting.py  receipt.py  retail_api.py  shift.py  templates.py
alphax_master_pos/doctype/alphax_pos_barcode_rule/: alphax_pos_barcode_rule.py
alphax_master_pos/doctype/alphax_pos_brand/: alphax_pos_brand.json  alphax_pos_brand.py
alphax_master_pos/doctype/alphax_pos_day_close/: alphax_pos_day_close.json  alphax_pos_day_close.py
alphax_master_pos/doctype/alphax_pos_language_pack/: alphax_pos_language_pack.json  alphax_pos_language_pack.py
alphax_master_pos/doctype/alphax_pos_notification_template/: alphax_pos_notification_template.json  alphax_pos_notification_template.py
alphax_master_pos/doctype/alphax_pos_order_item/: alphax_pos_order_item.json
alphax_master_pos/doctype/alphax_pos_outlet/: alphax_pos_outlet.py
alphax_master_pos/doctype/alphax_pos_receipt_template/: alphax_pos_receipt_template.json
alphax_master_pos/doctype/alphax_pos_settings/: alphax_pos_settings.py
alphax_master_pos/doctype/alphax_pos_shift/: alphax_pos_shift.py
alphax_master_pos/page/alphax_pos/: alphax_pos.css  alphax_pos.js  alphax_pos.json
alphax_master_pos/pos/: brand.py  maintenance.py
(+12 files in other folders)
