[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "alphax_master_pos"
authors = [{name = "AlphaX"}]
description = "Sector-agnostic Master POS platform for ERPNext / Frappe"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "frappe>=15.0.0",
]

[project.urls]
Home = "https://github.com/<your-org>/alphax_master_pos"

[tool.flit.module]
name = "alphax_master_pos"
