[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "alphax_master_pos"
authors = [{name = "AlphaX"}]
description = "Sector-agnostic Master POS platform for ERPNext / Frappe"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[project.urls]
Home = "https://github.com/jamunachi08/alphax_master_pos"

[tool.flit.module]
name = "alphax_master_pos"

[tool.bench.frappe-dependencies]
frappe = ">=15,<16"
erpnext = ">=15,<16"
